添加websocket通信功能